moved project to vite react

--- a/index.html
+++ b/index.html
@@ -42,5 +42,6 @@
   </head>
   <body class="w-100 "> 
     <div id="root" class="w-100 "></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
